--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -70,10 +70,11 @@ spec:
           {{- end }}
           {{- if .Values.index.wgetApi.enabled }}
           - path: /wget
+            pathType: Prefix
             backend:
               service:
                 name: {{ include "esgf.component.fullname" (list . "wget-api") }}
                 port:
-                number: 8000
+                  number: 8000
           {{- end }}
           {{- end }}
