Fixed bug in the config

--- a/deploy/kubernetes/chart/files/fileServer/datasets.conf
+++ b/deploy/kubernetes/chart/files/fileServer/datasets.conf
@@ -17,8 +17,8 @@ server {
     # Create a location block for each dataset
     {{- range .Values.data.datasets }}
     location /thredds/fileServer/{{ .path }}/ {
-        {{- if $solr.s3Location }}
-        {{- $s3 := $solr.s3Location -}}
+        {{- if .s3Location }}
+        {{- $s3 := .s3Location -}}
         proxy_pass https://{{ $s3.host }}:{{ $s3.port }}/{{ $s3.bucket }}/{{ $s3.dataPath }}/;
         {{- else }}
         alias {{ trimSuffix "/" .location }}/;
