Fixed template formatting issues

--- a/deploy/kubernetes/chart/files/fileServer/datasets.conf
+++ b/deploy/kubernetes/chart/files/fileServer/datasets.conf
@@ -18,8 +18,8 @@ server {
     {{- range .Values.data.datasets }}
     location /thredds/fileServer/{{ .path }}/ {
         {{- if .s3Location }}
-        {{- $s3 := .s3Location -}}
-        proxy_pass https://{{ $s3.host }}:{{ $s3.port }}/{{ $s3.bucket }}/{{ $s3.dataPath }}/;
+        {{- $s3 := .s3Location }}
+        proxy_pass https://{{ $s3.host }}:{{ $s3.port }}/{{ $s3.bucket }}/{{ trimAll "/" $s3.dataPath }}/;
         {{- else }}
         alias {{ trimSuffix "/" .location }}/;
         try_files $uri =404;
