Changes names for published_port variables

--- a/deploy/ansible/roles/proxy/tasks/main.yml
+++ b/deploy/ansible/roles/proxy/tasks/main.yml
@@ -66,8 +66,8 @@
       - "8080"
       - "8443"
     published_ports:
-      - "{{ published_port }}:8080"
-      - "{{ published_port_ssl }}:8443"
+      - "{{ published_port_http }}:8080"
+      - "{{ published_port_https }}:8443"
     networks:
       - name: esgf
     networks_cli_compatible: yes
