Update base to rocky9 Change all instances of yum to dnf Updated jdk and jre to use correct packages

--- a/deploy/ansible/roles/docker/tasks/main.yml
+++ b/deploy/ansible/roles/docker/tasks/main.yml
@@ -46,7 +46,7 @@
 # The Ansible Docker modules require the Docker Python SDK, which requires pip to install, which requires EPEL
 
 - name: Install pip for system python on CentOS / RHEL
-  yum:
+  dnf:
     name: pip
     state: latest
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
