--- a/images/base/Dockerfile
+++ b/images/base/Dockerfile
@@ -4,7 +4,7 @@
 ## Currently just a fully-updated CentOS 7 with common packages and entrypoint
 #####
 
-FROM centos:7.8.2003
+FROM rockylinux:9.2.20230513
 
 # Create the esgf user that will be used to run apps
 ENV ESGF_UID 1000
@@ -27,12 +27,12 @@ ENV LC_ALL en_US.UTF-8
 # Upgrade all existing packages
 # Updating CACHE_BUST to the current time will bust the cache and force a rebuild
 RUN CACHE_BUST="20220923"; \
-    yum makecache && yum upgrade -y && yum clean all
+    dnf makecache && dnf upgrade -y && dnf clean all
 
 # Install ca-certificates and openssl
-RUN yum makecache && \
-    yum install -y epel-release ca-certificates openssl && \
-    yum clean all
+RUN dnf makecache && \
+    dnf install -y epel-release ca-certificates openssl && \
+    dnf clean all
 
 # Install Tini
 ENV TINI_VERSION v0.18.0
