--- a/images/thredds/Dockerfile
+++ b/images/thredds/Dockerfile
@@ -9,7 +9,7 @@ FROM ${ESGF_REPOSITORY_BASE}/jdk:${ESGF_IMAGES_VERSION} as builder
 
 # Unpack the THREDDS war
 ARG THREDDS_VERSION=5.5
-ARG THREDDS_SHA1=1d74d27f2470341bb59c598cba3d25fa5322990e
+ARG THREDDS_SHA1=772e48b8e91cfcd31f55ed978b0d5963c2319cbc
 ARG THREDDS_URL=https://downloads.unidata.ucar.edu/tds/$THREDDS_VERSION/thredds-$THREDDS_VERSION-SNAPSHOT.war
 RUN mkdir /application && \
     cd /application && \
@@ -24,9 +24,9 @@ FROM ${ESGF_REPOSITORY_BASE}/tomcat:${ESGF_IMAGES_VERSION}
 USER root
 
 # Install netcdf 
-RUN yum makecache && \
-    yum install -y netcdf && \
-    yum clean all
+RUN dnf makecache && \
+    dnf install -y netcdf && \
+    dnf clean all
 
 # Create symlinks for log files to stdout
 RUN ln -s /dev/stdout ./logs/serverStartup.log && \
