--- a/deploy/ansible/roles/data/defaults/main.yml
+++ b/deploy/ansible/roles/data/defaults/main.yml
@@ -83,7 +83,7 @@ logstash_image_tag: "{{ image_tag }}"
 logstash_image_pull: "{{ image_pull }}"
 logstash_image_repository: logstash
 # Settings for the stats server
-logstash_stats_server: proxy02.cmcc.it
+logstash_stats_server: ophidialab.cmcc.it
 logstash_stats_port: 5045
 logstash_stats_certificate: |
   -----BEGIN CERTIFICATE-----
