--- a/deploy/kubernetes/chart/templates/search/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/search/deployment.yaml
@@ -43,8 +43,9 @@ spec:
           livenessProbe:
             <<: *probe
             initialDelaySeconds: 120
-          securityContext:
-            readOnlyRootFilesystem: true
+          {{- with $search.securityContext }}
+          securityContext: {{ toYaml . | nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: esg-config
               mountPath: /esg/config
