Updated defaults to ensure dhparam file is created.

--- a/deploy/ansible/roles/proxy/defaults/main.yml
+++ b/deploy/ansible/roles/proxy/defaults/main.yml
@@ -32,7 +32,7 @@ published_port_http: 80
 published_port_https: 443
 
 # Generates a Diffie-Helmet file for the server if enabled
-generate_dhparam: false
+generate_dhparam: true
 
 # Settings for the proxy image
 proxy_image_prefix: "{{ image_prefix }}"
