--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -168,12 +168,12 @@ build:python-build:
     CONTEXT_DIR: $CI_PROJECT_DIR/images/python-build
   needs: ["build:conda"]
 
-build:django:
+build:auth-service:
   extends: .docker-build
   stage: build-3
   variables:
-    CONTEXT_DIR: $CI_PROJECT_DIR/images/django
-  needs: ["build:conda"]
+    CONTEXT_DIR: $CI_PROJECT_DIR/images/auth-service
+  needs: ["build:python-build", "build:conda"]
 
 build:search:
   extends: .docker-build
@@ -188,10 +188,3 @@ build:thredds:
   variables:
     CONTEXT_DIR: $CI_PROJECT_DIR/images/thredds
   needs: ["build:jdk", "build:tomcat"]
-
-build:auth-service:
-  extends: .docker-build
-  stage: build-4
-  variables:
-    CONTEXT_DIR: $CI_PROJECT_DIR/images/auth-service
-  needs: ["build:python-build", "build:django"]
