Added an option to allow the publisher API to run in a separate pod from the search API

--- a/deploy/kubernetes/chart/templates/ingress/ingress-publish.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress-publish.yaml
@@ -20,7 +20,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ include "esgf.component.fullname" (list . "search") }}
+                name: {{ include "esgf.component.fullname" (list . "publish") }}
                 port:
                   number: 8080
 {{- end }}{{- end }}{{- end }}
