--- a/deploy/kubernetes/chart/files/search/esgf.properties
+++ b/deploy/kubernetes/chart/files/search/esgf.properties
@@ -7,3 +7,6 @@ esg.search.solr.publish.url=http://{{ include "esgf.component.fullname" (list . 
 esg.search.solr.query.url={{ $solr.slaveExternalUrl }}
 esg.search.solr.publish.url={{ $solr.masterExternalUrl }}
 {{- end }}
+index.timeout.connection={{ .Values.search.connectionTimeout }}
+index.timeout.read.datasets={{ .Values.search.datasetsTimeout }}
+index.timeout.read.files={{ .Values.search.filesTimeout }}
