Added missing default for Ansible playbook

--- a/deploy/ansible/roles/proxy/defaults/main.yml
+++ b/deploy/ansible/roles/proxy/defaults/main.yml
@@ -51,3 +51,6 @@ solr_enabled: true
 
 # Indicates if search is enabled
 search_enabled: true
+
+# Indicates if the auth service should be deployed or not
+auth_enabled: false
