Changed default search timeout values to strings

--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -507,9 +507,9 @@ index:
     # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
     tolerations:
     # Timeout settings
-    connectionTimeout: 1000
-    datasetsTimeout: 20000
-    filesTimeout: 3600000
+    connectionTimeout: "1000"
+    datasetsTimeout: "20000"
+    filesTimeout: "3600000"
     # Security context for search container.
     securityContext:
       # Run with a read-only root filesystem by default
