--- a/deploy/kubernetes/chart/files/fileServer/datasets.conf
+++ b/deploy/kubernetes/chart/files/fileServer/datasets.conf
@@ -14,6 +14,11 @@ server {
         return 404;
     }
 
+    # Health check
+    location /healthcheck {
+        return 200 'OK';
+    }
+
     # Create a location block for each dataset
     {{- range .Values.data.datasets }}
     location /thredds/fileServer/{{ .path }}/ {
