More flexible nginx configuration in helm chart

--- a/deploy/kubernetes/chart/files/fileServer/datasets.conf
+++ b/deploy/kubernetes/chart/files/fileServer/datasets.conf
@@ -14,6 +14,12 @@ server {
         return 404;
     }
 
+    # Basic metrics export, compatible with nginx exporter
+    # https://github.com/nginx/nginx-prometheus-exporter
+    location = /stub_status {
+        stub_status;
+    }
+
     # Create a location block for each dataset
     {{- range .Values.data.datasets }}
     location /thredds/fileServer/{{ .path }}/ {
@@ -22,6 +28,10 @@ server {
         proxy_pass https://{{ $s3.host }}:{{ $s3.port }}/{{ $s3.bucket }}/{{ trimAll "/" $s3.dataPath }}/;
         {{- else }}
         alias {{ trimSuffix "/" .location }}/;
+        autoindex on;
+        expires max;
+        sendfile on;
+        tcp_nopush on;
         try_files $uri =404;
         {{- end }}
     }
